feat: 경주할 자동차의 이름은 쉼표`,`로 구분