@@ -1,20 +1,19 @@
 package racingcar.io;
 
 import camp.nextstep.edu.missionutils.Console;
+import racingcar.exception.RacingException;
 
 public class Input {
 
     public String getUserAnswer() {
         String answer = Console.readLine();
 
-        if (isBlank(answer)) {
-            throw new IllegalArgumentException("잘못된 입력입니다.");
-        }
+        RacingException.throwIllegalArgumentException("잘못된 입력입니다.", isBlank(answer));
 
         return answer;
     }
 
     public boolean isBlank(String input) {
-        return input != null && input.isBlank();
+        return input != null && input.trim().isEmpty();
     }
 }
